--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ django-cors-headers = "^4.4.0"
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
 isort = "^5.13.2"
+flake8 = "^7.1.0"
 
 [build-system]
 requires = ["poetry-core"]
