--- a/.env-sample
+++ b/.env-sample
@@ -1,3 +1,5 @@
+SECRET_KEY=
+
 #postgress
 DB_POSTRESQL_USER=
 DB_POSTRESQL_PASSWORD=
@@ -13,11 +15,10 @@ EMAIL_TO=
 EMAIL_HOST=
 EMAIL_PORT=
 
-EMAIL_USE_TLS =
-EMAIL_USE_SSL =
+EMAIL_USE_TLS=
+EMAIL_USE_SSL=
 #для яндекса
-#SERVER_EMAIL=EMAIL_HOST_USER
-#DEFAULT_FROM_EMAIL=EMAIL_HOST_USER
+
 SERVER_EMAIL=
 DEFAULT_FROM_EMAIL=
 
@@ -25,4 +26,14 @@ DEFAULT_FROM_EMAIL=
 CACHE_ENABLED=
 LOCATION=
 DEBUG=
-SECRET_KEY=
+
+CELERY_BROKER_URL=
+
+# set the celery result backend
+CELERY_RESULT_BACKEND=
+
+TELEGRAM_URL =
+TELEGRAM_TOKEN=
+TELEGRAM_BOT_NAME=
+TELEGRAM_BOT_USERNAME=
+TELEGRAM_BOT_URL=
