--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ django-cors-headers = "^4.4.0"
 black = "^24.4.2"
 isort = "^5.13.2"
 flake8 = "^7.1.0"
+flake8-docstrings = "^1.7.0"
+flake8-builtins = "^2.5.0"
+flake8-quotes = "^3.4.0"
 
 [build-system]
 requires = ["poetry-core"]
