--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ redis = "^5.0.7"
 celery = "^5.4.0"
 django-celery-beat = "^2.6.0"
 django-cors-headers = "^4.4.0"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
