--- a/.env-sample
+++ b/.env-sample
@@ -1,9 +1,9 @@
 #postgress
-DB_POSTRESQL_USER=
-DB_POSTRESQL_PASSWORD=
-DB_POSTRESQL_NAME=
-DB_POSTRESQL_HOST=db
-DB_POSTRESQL_PORT=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_HOST=db
+POSTGRES_PORT=
 
 
 #cache and settings
